--- a/app/views/leaflet.xml
+++ b/app/views/leaflet.xml
@@ -9,13 +9,13 @@
 		   			<View textAlign="center" bottom="0" layout="vertical" height=220 width="100%">
 		   				<View layout="horizontal" height=Ti.UI.SIZE width="100%" bottom= 0 left= "5%" right="5%">
 		   					<View bottom="0"  height=Ti.UI.SIZE width="30%" right="5" >
-								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Calcium_plus.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
+								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Vidaylin_minibear.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
 							</View>
 							<View bottom="0"  height=Ti.UI.SIZE width="30%" right="5" >
-								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_fish_oil.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
+								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Vidaylin_Omega_kid.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
 							</View>
 							<View bottom="0"  height=Ti.UI.SIZE width="30%" right="5" >
-								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Nato_ALA.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
+								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Vidaylin_minibear.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
 							</View>
 		   					<ImageView image='/images/wood_rack.png' top=0  width="100%"  right=5, left=5 />
 		   				</View>
@@ -24,7 +24,7 @@
 					<View textAlign="center" bottom="0" layout="vertical" height=220 width="100%">
 		   				<View layout="horizontal" height=Ti.UI.SIZE width="100%" bottom= 0 left= "5%" right="5%">
 		   					<View bottom="0"  height=Ti.UI.SIZE width="30%" right="5">
-								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Surbex_Protect.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
+								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Vidaylin_Omega_kid.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
 							</View>
 							<View bottom="0"  height=Ti.UI.SIZE width="30%" right="5">
 								<ImageView image="/images/default_cover.jpg" onClick="readLeaflet" mod="Leaflet_Vidaylin_minibear.pdf" backgroundImage="/images/default_cover.jpg" bottom=0  width=90 />
