--- a/app/views/m_eCard.xml
+++ b/app/views/m_eCard.xml
@@ -1,6 +1,6 @@
 <Alloy>
 	<Window title="ASP eCARD" backButtonTitle="" layout="vertical" backgroundColor="#fff" id="eCard" class="container" navTintColor="#CE1D1C" platform="ios">
-		<View height="200dp" id="card"></View>
+		<View height="204" width="320" id="card"></View>
 		<Label>Click here to flip</Label>
 	</Window>
 </Alloy>
