--- a/app/views/m_myHealth.xml
+++ b/app/views/m_myHealth.xml
@@ -12,7 +12,7 @@
 		-->
 			<ScrollView id="graphScrollView" layout="vertical" height="100%" width="100%" >
 				<View id="bmiView" height="40%" width="100%" backgroundColor="#FFE2E2">
-					<WebView width="90%" backgroundColor="#FFE2E2" url="/html/bmi.html" disableBounce='true' touchEnabled="false"  ></WebView>
+					<WebView id="bmiWebView" width="90%" backgroundColor="#FFE2E2" url="/html/bmi.html" disableBounce='true' touchEnabled="false"  ></WebView>
 				</View>
 				<View id="bloodPressureView" height="40%" width="100%" backgroundColor="#EBEBEB">
 					<WebView width="90%" backgroundColor="#EBEBEB" url="/html/bloodPressure.html" disableBounce='true' touchEnabled="false"></WebView>
