--- a/app/views/clinicLocator.xml
+++ b/app/views/clinicLocator.xml
@@ -1,5 +1,8 @@
 <Alloy>
-	<Window title="Clinic Locator" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios">
+	<Window title="Clinic Locator" backButtonTitle="" class="container" navTintColor="#CE1D1C" platform="ios" >
+		<RightNavButton platform=ios>
+            <!--<Button title="List" onClick="listing" />-->
+        </RightNavButton>
 		<View id="main">
 			<ImageView width="100%" height="100%" image="/dummy/dummy-home.jpg"/>
 		</View>
