--- a/app/views/m_myClaim.xml
+++ b/app/views/m_myClaim.xml
@@ -7,6 +7,19 @@
         </RightNavButton>
 		<ScrollView id="main" layout="vertical">
 			<Label id="date"></Label>
+			<View left="10" right="10" top="10" bottom="10" height="Ti.UI.SIZE" width="Ti.UI.FILL">
+				<View borderColor="#000000" width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="vertical">
+					<Label class="title">Entitlement Balance</Label>
+					<View class="line"></View>
+					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
+						<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM1000</Label>
+					</View>
+					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
+						<Label class="subtitle">DENTAL</Label><Label class="subvalue" >RM500</Label>
+					</View>
+					<View height="10"></View>
+				</View>
+			</View>
 		</ScrollView>
 	</Window>
 </Alloy>
