PUSH NOTIFICATION implemented for survey

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -14,6 +14,7 @@
 							
 							<ImageView onClick="navWindow" mod="healthInfo" top="15" width="139" image="/btn/btn_healthInfo.png"/>
 							<ImageView onClick="navWindow" mod="leafletCategory" left="15" top="15" width="139" image="/btn/btn_leaflet.png"/>
+							<!--<ImageView onClick="navWindow" mod="survey" top="15" width="139" image="/btn/btn_healthInfo.png"/>-->
 						</View>
 					</ScrollView>
 				</View>
