--- a/app/views/clinicLocator.xml
+++ b/app/views/clinicLocator.xml
@@ -10,10 +10,9 @@
         	<ActivityIndicator  id="activityIndicator" />
         	<Label top="5" text="Loading" color="#ffffff" />
         </View>
-        <View id="mapview" ns="Alloy.Globals.Map" onClick="report" />
+        <View id="mapview" ns="Alloy.Globals.Map"/>
 		<!--<View layout="vertical" class="nearbyView">
 		 	<ScrollView id="panelListTbl" layout="horizontal" height="100%" width="100%" >
-			</ScrollView>
-	</View>-->
+			</ScrollView>-->
 	</Window>
 </Alloy>=
