--- a/app/views/m_myClaim.xml
+++ b/app/views/m_myClaim.xml
@@ -9,7 +9,11 @@
 			<Label id="date"></Label>
 			<View left="10" right="10" top="10" bottom="10" height="Ti.UI.SIZE" width="Ti.UI.FILL">
 				<View borderColor="#000000" width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="vertical">
-					<Label class="title">Entitlement Balance</Label>
+					<View backgroundColor="#ff0000" height="Ti.UI.SIZE" width="Ti.UI.FILL">
+						<Label class="title">Claims Balance</Label>
+					</View>
+					<View class="line"></View>
+					<Label class="padding" wordWrap="false" ellipsize="true">KHAIRIL AZMY BIN MOHD AMINUDDIN</Label>
 					<View class="line"></View>
 					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
 						<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM1000</Label>
@@ -17,7 +21,27 @@
 					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
 						<Label class="subtitle">DENTAL</Label><Label class="subvalue" >RM500</Label>
 					</View>
-					<View height="10"></View>
+					<View backgroundColor="#ff0000" height="Ti.UI.SIZE" width="Ti.UI.FILL">
+						<Label class="title">Claims Shared Balance</Label>
+					</View>
+					<View class="line"></View>
+					<Label class="padding" wordWrap="false" ellipsize="true">ELEESYA SOFE</Label>
+					<View class="line"></View>
+					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
+						<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
+					</View>
+					<View class="line"></View>
+					<Label class="padding" wordWrap="false" ellipsize="true">MUHAMMAD IMRAN</Label>
+					<View class="line"></View>
+					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
+						<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
+					</View>
+					<View class="line"></View>
+					<Label class="padding" wordWrap="false" ellipsize="true">ZETI AZRI ZAMBAHARI</Label>
+					<View class="line"></View>
+					<View width="Ti.UI.FILL" height="Ti.UI.SIZE" layout="horizontal">
+						<Label class="subtitle">GP/OUT-PATIENT</Label><Label class="subvalue">RM500</Label>
+					</View>
 				</View>
 			</View>
 		</ScrollView>
