--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -13,7 +13,7 @@
 							<ImageView onClick="navWindow" mod="clinicState" left="15" top="15" width="139" image="/btn/btn_clinic_location.png"/>
 							
 							<ImageView onClick="navWindow" mod="healthInfo" top="15" width="139" image="/btn/btn_healthInfo.png"/>
-							<ImageView onClick="navWindow" mod="leafletCategory" left="15" top="15" width="139" image="/btn/btn_leaflet.png"/>
+							<ImageView onClick="navWindow" mod="leaflet" left="15" top="15" width="139" image="/btn/btn_leaflet.png"/>
 							<!--<ImageView onClick="navWindow" mod="survey" top="15" width="139" image="/btn/btn_healthInfo.png"/>-->
 						</View>
 					</ScrollView>
