updated home page

--- a/app/views/home.xml
+++ b/app/views/home.xml
@@ -7,9 +7,8 @@
 					<ImageView id="logo" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png"/>
 					<ScrollView id="scrollboard" width="Titanium.UI.FILL" height="Ti.UI.FILL">
  
-						<View layout="horizontal" height="Ti.UI.SIZE" top=0>
-							<ImageView id="logo" width="100" height="100" top="10" left="10" image="/appicon-60@3x.png"/>
-							<View layout="vertical" right="0" width="60%" height="Ti.UI.SIZE" id="myInfo" />
+						<View layout="horizontal" height="Ti.UI.SIZE" top=0> 
+							<View layout="vertical" left="120" right="0" width="60%" height="Ti.UI.SIZE" id="myInfo" />
 						</View>
  
 						<View layout="horizontal" width="293" top="239">
